--- a/Website/style.css
+++ b/Website/style.css
@@ -42,23 +42,44 @@ body {
     color: #333;
 }
 
+.boxed {
+    background-color: #DDC9B4;
+    border: 1px ;
+    border-style: ridge ; 
+    
+    
+    
+}
+
+
 h1{font-family: "Lucida Bright", serif;
    font-size: 50px;
    color: #2A3D45;
    text-align: center;
-   margin-top: 60px;
+   margin-top: 5px;
+   margin-bottom: 5px;
+   margin-right: 15px;
+   margin-left: 15px;
 }
 
 h2{font-family: "Lucida Bright", serif;
    font-size: 30px;
    color: #2A3D45;
    text-align: center;
+   margin-top: 5px;
+   margin-bottom: 5px;
+   margin-right: 15px;
+   margin-left: 15px;
 }
 
 h3{font-family: "Lucida Bright", serif;
    font-size: 20px;
    color: #2A3D45;
    text-align: center;
+   margin-top: 5px;
+   margin-bottom: 5px;
+   margin-right: 15px;
+   margin-left: 15px;
    }
 
 p {
@@ -66,6 +87,10 @@ p {
     font-size: 15px;
     color: black;
     text-align: left;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 15px;
+    margin-left: 15px;
 }
 
 span {
