--- a/Website/style.css
+++ b/Website/style.css
@@ -1,7 +1,8 @@
 body {
     background-color: #C17C74
-    ;margin: 0;
-  padding: 0;
+    ;
+    margin: 0;
+    padding: 0;
 }
 
 .container {
@@ -9,7 +10,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
     padding-top: 60px;
 }
 .navbar {
@@ -46,44 +46,51 @@ body {
 
 .boxed {
     background-color: #DDC9B4;
-    border: 1px ;
-    border-style: ridge ; 
+    border: 1px;
+    border-style: ridge;
 }
 
-#index .index, #about .about, #methods .methods, #texts .texts, #onclusion .conclusions {
+#index .index,
+#about .about,
+#methods .methods,
+#texts .texts,
+#onclusion .conclusions {
     background-color: #C17C74
 }
 
 
-h1{font-family: "Lucida Bright", serif;
-   font-size: 50px;
-   color: #2A3D45;
-   text-align: center;
-   margin-top: 5px;
-   margin-bottom: 5px;
-   margin-right: 15px;
-   margin-left: 15px;
+h1 {
+    font-family: "Lucida Bright", serif;
+    font-size: 50px;
+    color: #2A3D45;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 15px;
+    margin-left: 15px;
 }
 
-h2{font-family: "Lucida Bright", serif;
-   font-size: 30px;
-   color: #2A3D45;
-   text-align: center;
-   margin-top: 5px;
-   margin-bottom: 5px;
-   margin-right: 15px;
-   margin-left: 15px;
+h2 {
+    font-family: "Lucida Bright", serif;
+    font-size: 30px;
+    color: #2A3D45;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 15px;
+    margin-left: 15px;
 }
 
-h3{font-family: "Lucida Bright", serif;
-   font-size: 20px;
-   color: #2A3D45;
-   text-align: center;
-   margin-top: 5px;
-   margin-bottom: 5px;
-   margin-right: 15px;
-   margin-left: 15px;
-   }
+h3 {
+    font-family: "Lucida Bright", serif;
+    font-size: 20px;
+    color: #2A3D45;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 15px;
+    margin-left: 15px;
+}
 
 p {
     font-family: "Lucida Bright", serif;
@@ -101,11 +108,11 @@ span {
 }
 
 .ex {
-  font-style: italic;
+    font-style: italic;
 }
 
 .translit {
-  font-style: italic;
+    font-style: italic;
 }
 .image-container {
     display: block;
@@ -118,7 +125,6 @@ img {
     max-width: 100%;
     height: auto;
 }
-
 
 
 
