--- a/Website/style.css
+++ b/Website/style.css
@@ -126,13 +126,13 @@ img {
     height: auto;
 }
 .author.ali:hover {
-  background-image: url(https://en.wikipedia.org/wiki/File:Abdullah_Yusuf_Ali_1911.jpg);
+  background-image: url(https://upload.wikimedia.org/wikipedia/en/8/8c/Abdullah_Yusuf_Ali_1911.jpg);
   background-position: center;
   background-size: cover;
 }
 
 .author.pickthall:hover {
-  background-image: url(https://en.wikipedia.org/wiki/File:Marmaduke_Pickthall_Portrait.jpg);
+  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Marmaduke_Pickthall_Portrait.jpg/300px-Marmaduke_Pickthall_Portrait.jpg);
   background-position: center;
   background-size: cover;
 }
