--- a/Website/style.css
+++ b/Website/style.css
@@ -132,7 +132,7 @@ img {
 }
 
 .author.pickthall:hover {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Marmaduke_Pickthall_Portrait.jpg/300px-Marmaduke_Pickthall_Portrait.jpg);
+  background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/71/Marmaduke_Pickthall_Portrait.jpg);
   background-position: center;
   background-size: cover;
 }
