--- a/Website/style.css
+++ b/Website/style.css
@@ -128,13 +128,13 @@ img {
 .author.ali:hover {
   background-image: url(https://upload.wikimedia.org/wikipedia/en/8/8c/Abdullah_Yusuf_Ali_1911.jpg);
   background-position: center;
-  background-size: cover;
+  background-size: contain;
 }
 
 .author.pickthall:hover {
   background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/71/Marmaduke_Pickthall_Portrait.jpg);
   background-position: center;
-  background-size: cover;
+  background-size: contain;
 }
 
 
