--- a/Website/style.css
+++ b/Website/style.css
@@ -125,16 +125,17 @@ img {
     max-width: 100%;
     height: auto;
 }
+
 .author.ali:hover {
   background-image: url(https://upload.wikimedia.org/wikipedia/en/8/8c/Abdullah_Yusuf_Ali_1911.jpg);
   background-position: center;
-  background-size: contain;
+  background-size: 50px 100px;
 }
 
 .author.pickthall:hover {
   background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/71/Marmaduke_Pickthall_Portrait.jpg);
   background-position: center;
-  background-size: contain;
+  background-size: 50px 100px;
 }
 
 
