fixed typo in css

--- a/Website/style.css
+++ b/Website/style.css
@@ -54,7 +54,7 @@ body {
 #about .about,
 #methods .methods,
 #texts .texts,
-#onclusion .conclusions {
+#conclusions .conclusions {
     background-color: #C17C74
 }
 
