--- a/Website/style.css
+++ b/Website/style.css
@@ -54,6 +54,7 @@ body {
 #about .about,
 #methods .methods,
 #texts .texts,
+#analysis .analysis,
 #conclusions .conclusions {
     background-color: #C17C74
 }
@@ -127,24 +128,23 @@ img {
 }
 
 .author.ali:hover img {
-   display: block;
+    display: block;
 }
 
 .author.pickthall:hover img {
-   display: block;
+    display: block;
 }
 
 .author img {
-   display: none;
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   max-width: 100%;
-   height: auto;
-   width: 200px;
-   height: 200px;
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+    height: auto;
+    width: 200px;
+    height: 200px;
 }
-
 
 
