--- a/Website/style.css
+++ b/Website/style.css
@@ -140,7 +140,7 @@ img {
 .author img {
     display: none;
     position: absolute;
-    top: 50%;
+    top: 100px;
     left: 50%;
     transform: translate(-50%, -50%);
     max-width: 100%;
