--- a/Website/style.css
+++ b/Website/style.css
@@ -139,8 +139,8 @@ img {
 
 .author img {
     display: none;
-    position: static;
-    top: 50%;
+    position: absolute;
+    top: 100%;
     left: 50%;
     transform: translate(-50%, -50%);
     max-width: 100%;
