--- a/Website/style.css
+++ b/Website/style.css
@@ -188,4 +188,62 @@ img {
     width: 200px;
     height: 200px;
 }
+.fleximage {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0px;
+  border: 1px solid black;
+  margin-top: 50px;
+}
+
+.image-link {
+  position: relative;
+  display: block;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.image-link:hover .overlay {
+  opacity: 1;
+}
+
+.text-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.image-container:hover .text-overlay {
+  opacity: 1;
+}
+
+.fleximage img {
+  width: 100%;
+  height: 252px;
+  object-fit: cover;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.fleximage a {
+  display: block;
+}
 
