--- a/Website/readingview.css
+++ b/Website/readingview.css
@@ -1,8 +1,3 @@
-main {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1rem;
-}
 .checkbox-container {
     position: sticky;
     top: 0;
@@ -70,6 +65,27 @@ div:lang(ar) {
 }
 .contrast.highlighted {
   background-color:maroon;
+}
+.grid-4-column {
+  display: flex;
+}
+
+.grid-4-column > div {
+  flex: 1;
+  margin: 5px;
+  padding: 5px;
+  box-sizing: border-box;
+  background-color: #DDC9B4;
+}
+.grid-4-column h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.grid-4-column p {
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0;
 }
 
 
