--- a/Website/style.css
+++ b/Website/style.css
@@ -246,4 +246,10 @@ img {
 .fleximage a {
   display: block;
 }
+.license-container {
+  border: 2px solid #333;
+  padding: 10px;
+  margin: 10px;
+  background-color: #DDC9B4;
+}
 
